# sonic

./: .gitignore  CMakeLists.txt  example1.html  format-code  index.html  manual.html  mix.cpp  revision.html  sonic.bnf  translator.html
VisualStudio/: sonic.sln
VisualStudio/sonic/: sonic.vcxproj  sonic.vcxproj.filters
examples/: mix.s  repeat.s  reverb.s  tone.s
runtime/: copystr.cpp  copystr.h  ddc.h  fftmisc.cpp  fourier.h  fourierd.cpp  pluck.cpp  pluck.h  riff.cpp  riff.h  sonic.cpp  sonic.h
src/: codegen.cpp  expr.cpp  func.cpp  main.cpp  manual.html  parse.h  prog.cpp  readme.txt  scan.cpp  scan.h  stmt.cpp  validate.cpp
www/: example1.html  index.html  manual.html  mix.cpp  revision.html  translator.html
